--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="FDNeRF: Few-shot Dynamic Neural Radiance Fields for Face Reconstruction and Expression Editing">
-  <meta name="keywords" content="FDNeRF, NeRF">
+        content="Adaptive Joint Optimization for 3D Reconstruction with Differentiable Rendering">
+  <meta name="keywords" content="texture Optimization, joint optimization, ADJOIN">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>FDNeRF: Few-shot Dynamic Neural Radiance Fields for Face Reconstruction and Expression Editing</title>
+  <title>Adaptive Joint Optimization for 3D Reconstruction with Differentiable Rendering</title>
 
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -47,31 +47,26 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">FDNeRF: Few-shot Dynamic Neural Radiance Fields for Face Reconstruction and Expression Editing</h1>
-          <h1 class="title is-3">SIGGRAPH Asia 2022</h1>
+          <h1 class="title is-1 publication-title">Adaptive Joint Optimization for 3D Reconstruction with Differentiable Rendering</h1>
+          <h1 class="title is-3">TVCG 2022</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://eckertzhang.github.io/">Jingbo Zhang</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://xiaoyu258.github.io/">Xiaoyu Li</a><sup>2</sup>,</span>
-            <span class="author-block">
               <a href="http://raywzy.com/">Ziyu Wan</a><sup>1</sup>,</span>
-            <span class="author-block">
-              <a href="https://cassiepython.github.io/">Can Wang</a><sup>1</sup>,</span>
             <span class="author-block">
               <a href="https://liaojing.github.io/html/">Jing Liao</a><sup>1</sup>,</span>
           </div>
 
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>City University of Hong Kong,</span>
-            <span class="author-block"><sup>2</sup>Tencent AI Lab</span>
           </div>
 
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2208.05751.pdf"
+                <a href="https://arxiv.org/pdf/2208.07003.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -80,7 +75,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2208.05751"
+                <a href="https://arxiv.org/abs/2208.07003"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -90,7 +85,7 @@
               </span>
               <!-- Video Link. -->
               <span class="link-block">
-                <a href="https://www.youtube.com/embed/at_42ekU0I0"
+                <a href="https://youtu.be/z8KzDgk1Rhg"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
@@ -100,7 +95,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/FDNeRF/FDNeRF"
+                <a href="https://adjointopti.github.io/adjoin.github.io/"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
