--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-full-width">
         <br />
-        <h2 class="title is-3">Pipline</h2>
+        <h2 class="title is-3">Pipeline</h2>
         
         <div>
           <img src="./static/images/pipline.png" alt="method" class="center">
