--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <section class="hero">
   <div class="hero-body">
-    <div class="container is-max-desktop">
+    <div class="container">
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">Adaptive Joint Optimization for 3D Reconstruction with Differentiable Rendering</h1>
